# router-cli

./: .gitignore  CLAUDE.md  README.md  fix-thinking-block-ordering.patch  package.json  pnpm-lock.yaml
.handoff/checkpoints/: handoff-azure-ai-foundry-integration-251218-1625.md
docs/: AMP_CODE.md  CAI_DAT.md  CAU_HINH_TOOLS.md  CUSTOM_PROVIDERS.md  HUONG_DAN_SU_DUNG.md  KHOI_DONG.md  MODEL_MAPPING.md  SERVER_MODE.md  TROUBLESHOOTING.md  VI_DU_ENDPOINT.md
examples/: README.md  amp-settings.example.json  config.example.json  proxy-config.example.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: CopilotCard.tsx
src/lib/: tauri.ts
src/pages/: Analytics.tsx  AuthFiles.tsx  Dashboard.tsx  LogViewer.tsx  Settings.tsx
src/stores/: app.ts
